--- a/css/screen.less
+++ b/css/screen.less
@@ -900,6 +900,72 @@ table.partners {
         }
     }
 }
+/* 5.2. What is iKoruna */
+.content-white.what-is-ikoruna {
+    h3.center {
+        text-align: center;
+        padding: 0 180px;
+        font-style: italic;
+        margin-bottom: 50px;
+        float: none;
+    }
+
+    h3.w65 {
+        width: 65%;
+    }
+
+    hr.text {
+        margin-top: 0px;
+    }
+
+    .pad20 {
+        padding: 0 20px;
+    }
+
+    table.phones td{
+        border: 0px;
+
+        .stripe {
+            background: url("../images/wallet_logo_pc.png") 0 0 no-repeat;
+            height: 245px;
+            display: block;
+        }
+
+        .double {
+            .stripe();
+            width: 362px;
+        }
+
+        .discount {
+            .stripe();
+            background-position: -362px 0;
+            width: 276px;
+        }
+
+        .protected {
+            .stripe();
+            background-position: -638px 0;
+            width: 368px;
+        }
+    }
+
+    table.services {
+        table-layout: fixed;
+        td {
+            padding: 0 40px;
+            border: 0px;
+
+            a {
+                color: @text-gray;
+            }
+
+            h4 {
+                color: @black;
+                margin-bottom: 20px;
+            }
+        }
+    }
+}
 
 .arrow {
     a {
