[UPD] some tweaks for what is ikoruna page

--- a/css/screen.less
+++ b/css/screen.less
@@ -922,6 +922,14 @@ table.partners {
         padding: 0 20px;
     }
 
+    .padding-bottom .pad20 {
+        padding: 0 20px 20px 20px;
+    }
+
+    .no-padding-left.pad20 {
+        padding: 0 20px 20px 0;
+    }
+
     table.phones td{
         border: 0px;
 
@@ -957,6 +965,9 @@ table.partners {
 
             a {
                 color: @text-gray;
+                display: block;
+                text-decoration: none;
+                margin: 10px 0;
             }
 
             h4 {
