--- a/css/screen.css
+++ b/css/screen.css
@@ -109,10 +109,12 @@ table.partners{width:100%;}table.partners td,table.partners th{text-align:left;b
 .content-white.what-is-ikoruna h3.w65{width:65%;}
 .content-white.what-is-ikoruna hr.text{margin-top:0px;}
 .content-white.what-is-ikoruna .pad20{padding:0 20px;}
+.content-white.what-is-ikoruna .padding-bottom .pad20{padding:0 20px 20px 20px;}
+.content-white.what-is-ikoruna .no-padding-left.pad20{padding:0 20px 20px 0;}
 .content-white.what-is-ikoruna table.phones td{border:0px;}.content-white.what-is-ikoruna table.phones td .stripe{background:url("../images/wallet_logo_pc.png") 0 0 no-repeat;height:245px;display:block;}
 .content-white.what-is-ikoruna table.phones td .double{background:url("../images/wallet_logo_pc.png") 0 0 no-repeat;height:245px;display:block;width:362px;}
 .content-white.what-is-ikoruna table.phones td .discount{background:url("../images/wallet_logo_pc.png") 0 0 no-repeat;height:245px;display:block;background-position:-362px 0;width:276px;}
 .content-white.what-is-ikoruna table.phones td .protected{background:url("../images/wallet_logo_pc.png") 0 0 no-repeat;height:245px;display:block;background-position:-638px 0;width:368px;}
-.content-white.what-is-ikoruna table.services{table-layout:fixed;}.content-white.what-is-ikoruna table.services td{padding:0 40px;border:0px;}.content-white.what-is-ikoruna table.services td a{color:#333333;}
+.content-white.what-is-ikoruna table.services{table-layout:fixed;}.content-white.what-is-ikoruna table.services td{padding:0 40px;border:0px;}.content-white.what-is-ikoruna table.services td a{color:#333333;display:block;text-decoration:none;margin:10px 0;}
 .content-white.what-is-ikoruna table.services td h4{color:#000000;margin-bottom:20px;}
 .arrow a{padding:0 15px 0 25px;display:block;}
