--- a/css/screen.less
+++ b/css/screen.less
@@ -978,6 +978,42 @@ table.partners {
     }
 }
 
+/* 5.3. How it works */
+.content-white.how-it-works {
+    .italic {
+        font-style: italic;
+    }
+
+    .text-heading {
+        width: 271px;
+
+        h3 {
+            margin-top: 70px;
+            #fonts > .shorthand(30px, bold, 30px);
+        }
+
+        h4 {
+            margin-top: 20px;   
+            color: @text-gray;
+        }
+    }
+
+    .phone-wifi {
+        background: url("../images/how_it_works_phone.png") 0 0 no-repeat;
+        width: 436px;
+        height: 333px;
+        margin-top: 30px;
+    }
+
+    .logo-text {
+        padding: 150px 0 0 0;
+        background: url("../images/how_it_works_phone.png") -436px 0 no-repeat;
+        width: 164px;
+        height: 182px;
+        margin-top: 30px;
+    }
+}
+
 .arrow {
     a {
         padding: 0 15px 0 25px;
