--- a/css/screen.less
+++ b/css/screen.less
@@ -313,7 +313,7 @@ textarea {
         a.left {
             color: @footer-medi-gray;
             text-align: center;
-            margin: 0 30px 0 0;
+            margin: 0 27px 0 0;
             #fonts > .shorthand(9px, normal, 9px);
 
             &:hover {
@@ -372,9 +372,75 @@ header.main {
         background-color: @white;
         .border-radius(4px);
         padding: 5px 10px;
-
+        .box-shadow(0px 1px 2px rgba(0,0,0,0.5));
+            
         .left {
             margin: 0 10px 0 0;
+        }
+    }
+
+    .login {
+        position: absolute;
+        z-index: 1002;
+        right: 10px;
+        top: 35px;
+        padding: 10px 5px;
+
+        &.active {
+            background-color: @white;
+            .border-radius(8px);
+            -webkit-border-bottom-left-radius: 0px;
+            -moz-border-radius-bottomleft: 0px;
+            border-bottom-left-radius: 0px;
+            -webkit-border-bottom-right-radius: 0px;
+            -moz-border-radius-bottomright: 0px;
+            border-bottom-right-radius: 0px;            
+        }
+    }
+
+    .right .login-form {
+        position: absolute;
+        z-index: 1002;
+        right: 10px;
+        top: 85px;
+        background-color: @white;
+        .border-radius(8px);
+        -webkit-border-top-right-radius: 0px;
+        -moz-border-radius-topright: 0px;
+        border-top-right-radius: 0px;            
+        width: 185px;
+        padding: 15px;
+
+        form {
+            margin: 0px !important;
+            float: none;
+        }
+
+        label {
+            color: @black;
+            #fonts > .shorthand(13px, normal, 15px);
+        }
+
+        input[type=text], input[type=password] {
+            width: 83%;
+            padding: 8px 15px;
+            height: 15px;
+            .border-radius(4px);
+            border: 1px solid @footer-dark-gray;
+            .gradient-vertical(#f3f3f3, #fefefe);
+            #fonts > .shorthand(18px, normal, 18px);
+        }
+
+        .row {
+            margin: 5px 0;
+
+            img {
+                float: none;
+            }
+        }
+
+        .forgotten-password {
+            color: @footer-dark-gray;
         }
     }
 
@@ -393,12 +459,16 @@ header.main {
         img {
             float: right;
         }
+
+        .jquery-selectbox {
+            right: 10px;
+        }
     }
 
     &.signed {
         .jquery-selectbox {
-            top: 55px;
-            right: 180px;
+            top: 45px;
+            right: 280px;
         }   
     }
 }
@@ -535,6 +605,16 @@ nav.top {
 .red {
     color: @menu-border-red !important;
 }
+.canvas {
+    position: absolute;
+    z-index: 1001;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background: url("../images/canvas_background.png") 0 0 repeat;
+}
+
 /* 4.1 Icons */
 .icon {
     display: block;
@@ -689,6 +769,8 @@ nav.top {
         }
 
         &.green {
+            height: 31px;
+
             .left {
                 background-position: 0 -318px;
                 height: 31px;
@@ -706,6 +788,28 @@ nav.top {
                 height: 31px;
                 width: 30px;
                 padding: 0px;
+            }
+        }
+
+        &.blue, &.green:hover, &.green.active {
+            height: 31px;
+
+            .left {
+                background-position: 0 -582px;
+                height: 31px;
+            }
+
+            .text {
+                background-position: 0 -613px;
+                #fonts > .shorthand(15px, bold, 30px);
+                height: 31px;
+                padding: 0 10px;   
+            }
+
+            .right {
+                background: transparent url("../images/icons_sprite.png") 0 -213px no-repeat;
+                width: 30px;
+                height: 31px;
             }
         }
 
