--- a/css/screen.css
+++ b/css/screen.css
@@ -23,7 +23,7 @@ label.with-textarea{display:block;float:left;width:70px;padding:15px;height:20px
 select{width:100%;font-weight:normal;height:50px;padding:12px 15px;}
 textarea{height:83px;resize:none;}
 .pad20{padding:0 20px 20px 20px;}
-.content-white{border-top:1px solid #5cb1d2;background:#ffffff;width:100%;min-height:300px;}
+.content-white{background:#ffffff;width:100%;min-height:300px;}
 .content-blue{width:100%;}.content-blue fieldset.col_2{width:45%;margin:0 20px 0 0;}.content-blue fieldset.col_2.end{margin:0px;}
 #footer{background:transparent url("../images/footer_background.png") 0 0 repeat-x;width:100%;height:205px;}#footer .pad20{padding-bottom:10px;}
 #footer hr{background:transparent url("../images/footer_hr.jpg") 0 0 repeat-x;border:none;height:2px;width:100%;margin:0 0 20px 0;}
@@ -34,7 +34,9 @@ textarea{height:83px;resize:none;}
 #footer .last a.left.last{margin:0;}
 #footer .copy{color:#666666;width:75%;}
 #footer .c{color:#666666;}
-header.main{padding:0 0px 10px 0;position:relative;}header.main .logo{margin:10px 0 0 0;display:block;width:220px;text-decoration:none;}header.main .logo img{margin:0 9px 0 0;}
+header.main{padding:0 0px 10px 0;position:relative;}header.main.signed .profile-block{right:0px;}
+header.main.signed .jquery-selectbox{right:0px !important;}
+header.main .logo{margin:10px 0 0 0;display:block;width:220px;text-decoration:none;}header.main .logo img{margin:0 9px 0 0;}
 header.main .logo strong{font-family:Aller,sans-serif;font-size:250%;font-weight:normal;line-height:30px;font-style:italic;color:#000000;position:absolute;top:35px;left:85px;}
 header.main .logo span{font-size:8px;position:absolute;top:60px;left:100px;}
 header.main .profile-block{position:absolute;right:14px;top:35px;background-color:#ffffff;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;padding:5px 10px;-webkit-box-shadow:0px 1px 2px rgba(0, 0, 0, 0.5);-moz-box-shadow:0px 1px 2px rgba(0, 0, 0, 0.5);box-shadow:0px 1px 2px rgba(0, 0, 0, 0.5);}header.main .profile-block .left{margin:0 10px 0 0;}
@@ -162,9 +164,9 @@ table.partners{width:100%;}table.partners td,table.partners th{text-align:left;b
 .content-white.registration a.more{margin:0 0 0 10px;font-size:14px;}
 .content-white.registration a.conditions-link{color:#cd1324;}
 .content-white.profile{position:relative;}.content-white.profile .tab-controls{position:absolute;top:0px;width:920px;}
-.content-white.profile ul.tabs{float:left;margin:16px 0 0 0;}.content-white.profile ul.tabs li{padding:10px 20px 15px 20px;font-size:18px;font-weight:normal;line-height:18px;list-style-type:none;display:inline-block;*display:inline;*zoom:1;}.content-white.profile ul.tabs li a{color:#cd1324;}
+.content-white.profile ul.tabs{float:left;margin:1px 0 0 0;}.content-white.profile ul.tabs li{padding:10px 20px 15px 20px;font-size:18px;font-weight:normal;line-height:18px;list-style-type:none;display:inline-block;*display:inline;*zoom:1;}.content-white.profile ul.tabs li a{color:#cd1324;}
 .content-white.profile ul.tabs li.active{border:1px solid #e9e9e9;border-bottom:1px solid #ffffff;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;-webkit-border-bottom-left-radius:0px;-moz-border-radius-bottomleft:0px;border-bottom-left-radius:0px;-webkit-border-bottom-right-radius:0px;-moz-border-radius-bottomright:0px;border-bottom-right-radius:0px;background-color:#ffffff;}.content-white.profile ul.tabs li.active a{color:#000000;text-decoration:none;}
-.content-white.profile .signout{margin:20px 0 0 0;}
+.content-white.profile .signout{margin:5px 0 0 0;}
 .content-white.profile .background{margin-top:15px;}
 .content-white.profile .col_3{margin-right:45px;}.content-white.profile .col_3.last{margin:0px;}
 .content-white.payment-history .filters{margin:0 0 20px 0;}.content-white.payment-history .filters h3{float:left;font-size:20px;font-weight:bold;line-height:30px;margin:0 0 0 20px;}
