--- a/css/screen.less
+++ b/css/screen.less
@@ -692,6 +692,18 @@ nav.top {
         width: 19px;
         height: 21px;
     }
+    &.small-arrow {
+        width: 7px;
+        height: 9px;
+
+        &.black {
+            background-position: -59px -52px;
+        }
+
+        &.red {
+            background-position: -59px -62px;
+        }
+    }
 }
 
 .button {
@@ -1099,6 +1111,7 @@ table.operations {
     }
 }
 
+/* 4.4 Partners table */
 table.partners {
     width: 100%;
     
@@ -1110,6 +1123,75 @@ table.partners {
             font-weight: normal;
         }
     }
+}
+
+/* 4.5 Vertical menu */
+.menu-vertical {
+    list-style-type: none;
+    margin: 0 25px 0 -45px;
+    width: 235px;
+    padding: 30px 0;
+    background: url(../images/background_vertical.png) 0 0 repeat-y;
+    
+    li {
+        padding: 8px 15px 8px 8px;
+
+        a {
+            color: @menu-border-red;
+            text-decoration: underline;
+            #fonts > .shorthand(14px, normal, 20px);
+
+            .small-arrow {
+                margin: 4px 10px 0 0;
+            }
+
+            .text {
+                display: block;
+                float: left;
+                width: 186px;
+            }
+        }
+
+        &.active {
+            .border-radius(8px);
+            border: 1px solid @light-box-gray;
+            border-right: 0px;
+            -webkit-border-top-right-radius: 0px;
+            -moz-border-radius-topright: 0px;
+            border-top-right-radius: 0px;
+            -webkit-border-bottom-right-radius: 0px;
+            -moz-border-radius-bottomright: 0px;
+            border-bottom-right-radius: 0px;
+            background-color: @white;
+            
+            a {
+                color: @black;
+                text-decoration: none;
+            }
+        }
+
+        h4 {
+            margin: 0;
+            #fonts > .shorthand(16px, normal, 20px);
+        }
+
+        &.separator {
+            padding-bottom: 20px;
+            margin-bottom: 20px;
+            border-bottom: 1px solid @light-box-gray;
+        }
+    }
+}
+
+.menu-vertical-bottom {
+    background: transparent url(../images/background_vertical_bottom.png) 0 0 no-repeat;
+    width: 241px;
+    height: 50px;
+    margin: 0 0 0 -51px;
+}
+
+.menu-vertical-content {
+    width: 670px;
 }
 
 /* 5. Page specific */
@@ -1150,6 +1232,10 @@ table.partners {
         &.last {
             margin: 0 0 0 -37px;
         }
+    }
+
+    .signout {
+        margin: 45px 0 0 0;
     }
 
 }
@@ -1545,6 +1631,17 @@ table.partners {
                 padding: 15px !important;
             }
         }
+    }
+}
+
+/* 5.7. Dealer Merchant */
+.dealer {
+    .light-gray-box {
+        margin: 30px 0 0 0;
+    }
+
+    .col_2 {
+         width: 40%;
     }
 }
 
